# cars-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/config/: slack.yml
.github/workflows/: cloud_deployment.yml  deploy_SaaS.yml  tests.yml
app/: create_db.py  database.py  main.py  models.py  test.py
app/models/: db_models.py  models.py
test/: create_db.py  main.py  test_app_main.py  test_main.py
tests/: test.py
