[tool.poetry]
name = "cars-api"
version = "0.1.0"
description = ""
authors = ["goyalpramod <goyalpramod1729@gmail.com>"]
readme = "README.md"
packages = [{include = "cars_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
requests = "^2.28.1"
sqlalchemy = "^1.4.44"
uvicorn = "^0.20.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
